--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,23 +1,66 @@
 <div class="navbar-container">
-  <img src="../../assets/dotgrid-rippednotes.jpg" alt="dot-grid" class="navbar-background">
   <div class="navbar-asides">
-    <div>
-      <div class="navbar-profile-container">
-        <h2 class="navbar-profile-title">Adolfo Moyano</h2>
-        <img src="../../assets/profile.jpg" alt="profile-photo" class="navbar-profile-photo">
-        <h3 class="navbar-profile-title">SRE</h3>
+    <img
+      src="../../assets/dotgrid-rippednotes.jpg"
+      alt="dot-grid"
+      class="navbar-background"
+    />
+    <div class="navbar-leftside">
+      <div>
+        <div class="navbar-profile-container">
+          <h2 class="navbar-profile-title">Adolfo Moyano</h2>
+          <img
+            src="../../assets/profile.jpg"
+            alt="profile-photo"
+            class="navbar-profile-photo"
+          />
+          <h3 class="navbar-profile-title">SRE</h3>
+        </div>
+        <div class="navbar-profile-info">
+          <h1 class="navbar-profile-info-text">
+            SRE / DevOps / Cloud Engineer from <br />
+            Buenos Aires, Argentina.
+          </h1>
+        </div>
       </div>
-      <div class="navbar-profile-info">
-        <h1 class="navbar-profile-info-text">SRE / DevOps / Cloud Engineer from <br> Buenos Aires, Argentina.</h1>
+      <div class="navbar-logos">
+        <img
+          src="../../assets/aws-logo.png"
+          alt="aws-logo"
+          class="navbar-logo"
+        />
+        <img
+          src="../../assets/linux-logo.png"
+          alt="linux-logo"
+          class="navbar-logo"
+        />
+        <img
+          src="../../assets/openshift-logo.png"
+          alt="openshift-logo"
+          class="navbar-logo"
+        />
+        <img
+          src="../../assets/terraform-logo.png"
+          alt="terraform-logo"
+          class="navbar-logo"
+        />
+        <img
+          src="../../assets/kubernetes-logo.png"
+          alt="kubernetes-logo"
+          class="navbar-logo"
+        />
+        <img
+          src="../../assets/go-logo.png"
+          alt="golang-logo"
+          class="navbar-logo"
+        />
       </div>
     </div>
-    <div class="navbar-logos">
-      <img src="../../assets/aws-logo.png" alt="aws-logo" class="navbar-logo">
-      <img src="../../assets/linux-logo.png" alt="linux-logo" class="navbar-logo">
-      <img src="../../assets/openshift-logo.png" alt="openshift-logo" class="navbar-logo">
-      <img src="../../assets/terraform-logo.png" alt="terraform-logo" class="navbar-logo">
-      <img src="../../assets/kubernetes-logo.png" alt="kubernetes-logo" class="navbar-logo">
-      <img src="../../assets/go-logo.png" alt="golang-logo" class="navbar-logo">
+    <div class="navbar-rightside">
+      <h2 class="navbar-rightside-title">👋 Hello! My name is Adolfo, but you can call me Adolf. <br> In this site I will show you how I can add value to your company!</h2>
+      <div class="navbar-rightside-gif">
+        <img src="../../assets/coworking-customer-service-person-answering-question.gif" alt="person-answering-question" class="navbar-rightside-person-answering-question-gif">
+      </div>
     </div>
   </div>
 </div>
